# yaml-workflow-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: exemplo_uso.py  workflow_simples.yaml
tests/: test_engine.py  test_parser.py
yaml_workflow_engine/: __init__.py  context.py  engine.py  parser.py  registry.py
yaml_workflow_engine/handlers/: http_handler.py  log_handler.py
